# summation

./: .clang-tidy  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  environment_8h_source.html  expression_8h_source.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  index.html  md__2github_2workspace_2README.html  navtreedata.js  navtreeindex0.js  pages.html  structenvironment-members.html  structenvironment.html  structenvironment.js  structexpression-members.html  structexpression.html  structexpression.js  structtest__state-members.html  structtest__state.html  structtest__state.js  structtest__state_1_1test__case-members.html  structtest__state_1_1test__case.html  summation_8h_source.html
.github/workflows/: deploy_pages.yml
doc/: Doxyfile  custom.css
include/: environment.h  expression.h  summation.h
search/: all_0.js  all_1.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_1.js  enums_0.js  functions_0.js  pages_0.js  searchdata.js  variables_0.js  variables_3.js
src/: environment.c  expression.c  main.c  summation.c
test/: CMakeLists.txt  test_environment.c  test_expression.c  test_summation.c
